[package]
name = "rusty_canvas"
version = "0.1.0"
authors = ["Bertie <berniesnell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
http = "0.2.1"
serde_json = "1.0"
warp = "0.2.5"
tokio = { version = "0.2", features = ["macros"] }
hyper = "0.13"
parking_lot = "0.11.0"
futures-util = "0.3.5"
futures = { version = "0.3", default-features = false }
