[package]
name = "rusty_canvas"
version = "0.1.0"
authors = ["Bertie <berniesnell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
warp = "0.2.5"
tokio = { version = "0.2", features = ["macros"] }
parking_lot = "0.11.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.8.1", features = ["v4"] }